--- a/android/res/values-ru/strings.xml
+++ b/android/res/values-ru/strings.xml
@@ -891,7 +891,7 @@
 	<string name="type.amenity.doctors">Врач</string>
 	<string name="type.amenity.drinking_water">Питьевой фонтан</string>
 	<string name="type.amenity.driving_school">Автошкола</string>
-	<string name="type.amenity.embassy">Посольство</string>
+	<string name="type.office.diplomatic">Посольство</string>
 	<string name="type.amenity.fast_food">Фастфуд</string>
 	<string name="type.amenity.ferry_terminal">Паром</string>
 	<string name="type.amenity.fire_station">Пожарная часть</string>
@@ -1089,8 +1089,18 @@
 	<string name="type.emergency.fire_hydrant">Гидрант</string>
 	<string name="type.emergency.phone">Телефон для экстренных вызовов</string>
 	<string name="type.entrance">Вход</string>
+	<string name="type.healthcare.laboratory">Медицинская лаборатория</string>
+	<string name="type.highway.bridleway">Дорога для всадников</string>
+	<string name="type.highway.bridleway.bridge">Дорога для всадников</string>
+	<string name="type.highway.bridleway.permissive">Дорога для всадников</string>
+	<string name="type.highway.bridleway.tunnel">Дорога для всадников</string>
 	<string name="type.highway.bus_stop">Остановка</string>
 	<string name="type.highway.construction">Строящаяся дорога</string>
+	<string name="type.highway.cycleway">Велодорожка</string>
+	<string name="type.highway.cycleway.bridge">Велодорожка</string>
+	<string name="type.highway.cycleway.permissive">Велодорожка</string>
+	<string name="type.highway.cycleway.tunnel">Велодорожка</string>
+	<string name="type.highway.elevator">Лифт</string>
 	<string name="type.highway.footway">Дорожка</string>
 	<string name="type.highway.footway.alpine_hiking">Дорожка</string>
 	<string name="type.highway.footway.area">Дорожка</string>
@@ -1315,8 +1325,16 @@
 	<string name="type.power.pole">Опора ЛЭП</string>
 	<string name="type.power.substation">Подстанция</string>
 	<string name="type.power.tower">Опора ЛЭП</string>
+	<string name="type.public_transport">Общественный транспорт</string>
+	<string name="type.public_transport.platform">Платформа</string>
+	<string name="type.railway.funicular">Фуникулер</string>
+	<string name="type.railway.funicular.bridge">Фуникулер</string>
+	<string name="type.railway.funicular.tunnel">Фуникулер</string>
 	<string name="type.railway.halt">Ж/д станция</string>
 	<string name="type.railway.level_crossing">Железнодорожный переезд</string>
+	<string name="type.railway.light_rail">Скоростной трамвай</string>
+	<string name="type.railway.light_rail.bridge">Скоростной трамвай</string>
+	<string name="type.railway.light_rail.tunnel">Скоростной трамвай</string>
 	<string name="type.railway.monorail">Монорельсовая железная дорога</string>
 	<string name="type.railway.rail">Железнодорожный путь</string>
 	<string name="type.railway.station">Ж/д станция</string>
@@ -1325,28 +1343,15 @@
 	<string name="type.railway.station.subway">Метро</string>
 	<string name="type.railway.station.subway.barcelona">Метро</string>
 	<string name="type.railway.station.subway.berlin">Метро</string>
-	<string name="type.railway.station.subway.blue">Метро</string>
-	<string name="type.railway.station.subway.brown">Метро</string>
-	<string name="type.railway.station.subway.darkgreen">Метро</string>
-	<string name="type.railway.station.subway.gray">Метро</string>
-	<string name="type.railway.station.subway.green">Метро</string>
-	<string name="type.railway.station.subway.grey">Метро</string>
 	<string name="type.railway.station.subway.kiev">Метро</string>
-	<string name="type.railway.station.subway.lightblue">Метро</string>
-	<string name="type.railway.station.subway.lightgreen">Метро</string>
 	<string name="type.railway.station.subway.london">Метро</string>
 	<string name="type.railway.station.subway.madrid">Метро</string>
 	<string name="type.railway.station.subway.minsk">Метро</string>
 	<string name="type.railway.station.subway.moscow">Метро</string>
 	<string name="type.railway.station.subway.newyork">Метро</string>
-	<string name="type.railway.station.subway.orange">Метро</string>
 	<string name="type.railway.station.subway.paris">Метро</string>
-	<string name="type.railway.station.subway.purple">Метро</string>
-	<string name="type.railway.station.subway.red">Метро</string>
 	<string name="type.railway.station.subway.roma">Метро</string>
 	<string name="type.railway.station.subway.spb">Метро</string>
-	<string name="type.railway.station.subway.violet">Метро</string>
-	<string name="type.railway.station.subway.yellow">Метро</string>
 	<string name="type.railway.subway_entrance">Вход в метро</string>
 	<string name="type.railway.subway_entrance.barcelona">Метро</string>
 	<string name="type.railway.subway_entrance.berlin">Метро</string>
@@ -1359,7 +1364,10 @@
 	<string name="type.railway.subway_entrance.paris">Метро</string>
 	<string name="type.railway.subway_entrance.roma">Метро</string>
 	<string name="type.railway.subway_entrance.spb">Метро</string>
-	<string name="type.railway.tram_stop">Остановка</string>
+	<string name="type.railway.tram">Трамвай</string>
+	<string name="type.railway.tram.bridge">Трамвай</string>
+	<string name="type.railway.tram.tunnel">Трамвай</string>
+	<string name="type.railway.tram_stop">Остановка трамвая</string>
 	<string name="type.shop">Магазин</string>
 	<string name="type.shop.alcohol">Магазин алкоголя</string>
 	<string name="type.shop.bakery">Булочная</string>
