--- a/android/res/values-hu/strings.xml
+++ b/android/res/values-hu/strings.xml
@@ -850,7 +850,7 @@
 	<string name="type.amenity.doctors">Rendelő</string>
 	<string name="type.amenity.drinking_water">Ivóvíz</string>
 	<string name="type.amenity.driving_school">Autósiskola</string>
-	<string name="type.amenity.embassy">Nagykövetség</string>
+	<string name="type.office.diplomatic">Nagykövetség</string>
 	<string name="type.amenity.fast_food">Gyorsétterem</string>
 	<string name="type.amenity.ferry_terminal">Komp</string>
 	<string name="type.amenity.fire_station">Tűzoltóság</string>
@@ -1036,6 +1036,7 @@
 	<string name="type.emergency.fire_hydrant">Tűzcsap</string>
 	<string name="type.emergency.phone">Sürgősségi telefon</string>
 	<string name="type.entrance">Bejárat</string>
+	<string name="type.healthcare.laboratory">Orvosi laboratórium</string>
 	<string name="type.highway.bus_stop">Buszmegálló</string>
 	<string name="type.highway.construction">Útépítés</string>
 	<string name="type.highway.footway">Ösvény</string>
@@ -1256,28 +1257,15 @@
 	<string name="type.railway.station.subway">Földalatti</string>
 	<string name="type.railway.station.subway.barcelona">Földalatti</string>
 	<string name="type.railway.station.subway.berlin">Földalatti</string>
-	<string name="type.railway.station.subway.blue">Földalatti</string>
-	<string name="type.railway.station.subway.brown">Földalatti</string>
-	<string name="type.railway.station.subway.darkgreen">Földalatti</string>
-	<string name="type.railway.station.subway.gray">Földalatti</string>
-	<string name="type.railway.station.subway.green">Földalatti</string>
-	<string name="type.railway.station.subway.grey">Földalatti</string>
 	<string name="type.railway.station.subway.kiev">Földalatti</string>
-	<string name="type.railway.station.subway.lightblue">Földalatti</string>
-	<string name="type.railway.station.subway.lightgreen">Földalatti</string>
 	<string name="type.railway.station.subway.london">Földalatti</string>
 	<string name="type.railway.station.subway.madrid">Földalatti</string>
 	<string name="type.railway.station.subway.minsk">Földalatti</string>
 	<string name="type.railway.station.subway.moscow">Földalatti</string>
 	<string name="type.railway.station.subway.newyork">Földalatti</string>
-	<string name="type.railway.station.subway.orange">Földalatti</string>
 	<string name="type.railway.station.subway.paris">Földalatti</string>
-	<string name="type.railway.station.subway.purple">Földalatti</string>
-	<string name="type.railway.station.subway.red">Földalatti</string>
 	<string name="type.railway.station.subway.roma">Földalatti</string>
 	<string name="type.railway.station.subway.spb">Földalatti</string>
-	<string name="type.railway.station.subway.violet">Földalatti</string>
-	<string name="type.railway.station.subway.yellow">Földalatti</string>
 	<string name="type.railway.subway_entrance">Földalatti bejárat</string>
 	<string name="type.railway.subway_entrance.barcelona">Földalatti</string>
 	<string name="type.railway.subway_entrance.berlin">Földalatti</string>
