--- a/android/res/values-ja/strings.xml
+++ b/android/res/values-ja/strings.xml
@@ -860,7 +860,7 @@
 	<string name="type.amenity.doctors">医院</string>
 	<string name="type.amenity.drinking_water">水飲み場</string>
 	<string name="type.amenity.driving_school">自動車教習所</string>
-	<string name="type.amenity.embassy">大使館</string>
+	<string name="type.office.diplomatic">大使館</string>
 	<string name="type.amenity.fast_food">ファストフード</string>
 	<string name="type.amenity.ferry_terminal">フェリー</string>
 	<string name="type.amenity.fire_station">消防署</string>
@@ -1060,6 +1060,7 @@
 	<string name="type.emergency.fire_hydrant">消火栓</string>
 	<string name="type.emergency.phone">緊急電話</string>
 	<string name="type.entrance">エントランス</string>
+	<string name="type.healthcare.laboratory">医療研究所</string>
 	<string name="type.highway">道路</string>
 	<string name="type.highway.bridleway">馬道</string>
 	<string name="type.highway.bridleway.bridge">馬道(橋)</string>
@@ -1183,7 +1184,6 @@
 	<string name="type.historic.memorial.sculpture">彫刻</string>
 	<string name="type.historic.memorial.statue">塑像</string>
 	<string name="type.historic.monument">記念碑</string>
-	<string name="type.historic.museum">歴史的なミュージアム</string>
 	<string name="type.historic.ruins">古跡</string>
 	<string name="type.historic.ship">退役船</string>
 	<string name="type.historic.tomb">墓</string>
@@ -1408,28 +1408,15 @@
 	<string name="type.railway.station.subway">地下鉄</string>
 	<string name="type.railway.station.subway.barcelona">地下鉄</string>
 	<string name="type.railway.station.subway.berlin">地下鉄</string>
-	<string name="type.railway.station.subway.blue">地下鉄</string>
-	<string name="type.railway.station.subway.brown">地下鉄</string>
-	<string name="type.railway.station.subway.darkgreen">地下鉄</string>
-	<string name="type.railway.station.subway.gray">地下鉄</string>
-	<string name="type.railway.station.subway.green">地下鉄</string>
-	<string name="type.railway.station.subway.grey">地下鉄</string>
 	<string name="type.railway.station.subway.kiev">地下鉄</string>
-	<string name="type.railway.station.subway.lightblue">地下鉄</string>
-	<string name="type.railway.station.subway.lightgreen">地下鉄</string>
 	<string name="type.railway.station.subway.london">地下鉄</string>
 	<string name="type.railway.station.subway.madrid">地下鉄</string>
 	<string name="type.railway.station.subway.minsk">地下鉄</string>
 	<string name="type.railway.station.subway.moscow">地下鉄</string>
 	<string name="type.railway.station.subway.newyork">地下鉄</string>
-	<string name="type.railway.station.subway.orange">地下鉄</string>
 	<string name="type.railway.station.subway.paris">地下鉄</string>
-	<string name="type.railway.station.subway.purple">地下鉄</string>
-	<string name="type.railway.station.subway.red">地下鉄</string>
 	<string name="type.railway.station.subway.roma">地下鉄</string>
 	<string name="type.railway.station.subway.spb">地下鉄</string>
-	<string name="type.railway.station.subway.violet">地下鉄</string>
-	<string name="type.railway.station.subway.yellow">地下鉄</string>
 	<string name="type.railway.subway_entrance">地下鉄入り口</string>
 	<string name="type.railway.subway_entrance.barcelona">地下鉄</string>
 	<string name="type.railway.subway_entrance.berlin">地下鉄</string>
@@ -1451,8 +1438,6 @@
 	<string name="type.railway.yard.tunnel">ヤード(トンネル)</string>
 	<string name="type.route">ルート</string>
 	<string name="type.route.ferry">フェリー航路</string>
-	<string name="type.route.ferry.motor_vehicle">フェリー航路(動力車)</string>
-	<string name="type.route.ferry.motorcar">フェリー航路(自動車)</string>
 	<string name="type.shop">買い物</string>
 	<string name="type.shop.alcohol">酒屋</string>
 	<string name="type.shop.bakery">パン屋</string>
