--- a/android/res/values-nb/strings.xml
+++ b/android/res/values-nb/strings.xml
@@ -827,7 +827,7 @@
 	<string name="type.amenity.doctors">Legekontor</string>
 	<string name="type.amenity.drinking_water">Drikkevann</string>
 	<string name="type.amenity.driving_school">Kjøreskole</string>
-	<string name="type.amenity.embassy">Ambassade</string>
+	<string name="type.office.diplomatic">Ambassade</string>
 	<string name="type.amenity.fast_food">Hurtigmat</string>
 	<string name="type.amenity.ferry_terminal">Ferje</string>
 	<string name="type.amenity.fire_station">Brannstasjon</string>
@@ -1012,6 +1012,7 @@
 	<string name="type.emergency.fire_hydrant">Brannhydrant</string>
 	<string name="type.emergency.phone">Nødtelefon</string>
 	<string name="type.entrance">Inngang</string>
+	<string name="type.healthcare.laboratory">Medisinsk laboratorium</string>
 	<string name="type.highway.bus_stop">Busstopp</string>
 	<string name="type.highway.construction">Veikonstruksjon</string>
 	<string name="type.highway.footway">Sti</string>
@@ -1230,28 +1231,15 @@
 	<string name="type.railway.station.subway">T-bane</string>
 	<string name="type.railway.station.subway.barcelona">T-bane</string>
 	<string name="type.railway.station.subway.berlin">T-bane</string>
-	<string name="type.railway.station.subway.blue">T-bane</string>
-	<string name="type.railway.station.subway.brown">T-bane</string>
-	<string name="type.railway.station.subway.darkgreen">T-bane</string>
-	<string name="type.railway.station.subway.gray">T-bane</string>
-	<string name="type.railway.station.subway.green">T-bane</string>
-	<string name="type.railway.station.subway.grey">T-bane</string>
 	<string name="type.railway.station.subway.kiev">T-bane</string>
-	<string name="type.railway.station.subway.lightblue">T-bane</string>
-	<string name="type.railway.station.subway.lightgreen">T-bane</string>
 	<string name="type.railway.station.subway.london">T-bane</string>
 	<string name="type.railway.station.subway.madrid">T-bane</string>
 	<string name="type.railway.station.subway.minsk">T-bane</string>
 	<string name="type.railway.station.subway.moscow">T-bane</string>
 	<string name="type.railway.station.subway.newyork">T-bane</string>
-	<string name="type.railway.station.subway.orange">T-bane</string>
 	<string name="type.railway.station.subway.paris">T-bane</string>
-	<string name="type.railway.station.subway.purple">T-bane</string>
-	<string name="type.railway.station.subway.red">T-bane</string>
 	<string name="type.railway.station.subway.roma">T-bane</string>
 	<string name="type.railway.station.subway.spb">T-bane</string>
-	<string name="type.railway.station.subway.violet">T-bane</string>
-	<string name="type.railway.station.subway.yellow">T-bane</string>
 	<string name="type.railway.subway_entrance">T-bane inngang</string>
 	<string name="type.railway.subway_entrance.barcelona">T-bane</string>
 	<string name="type.railway.subway_entrance.berlin">T-bane</string>
