--- a/android/res/values-pt-rBR/strings.xml
+++ b/android/res/values-pt-rBR/strings.xml
@@ -879,7 +879,7 @@
 	<string name="type.amenity.doctors">Consultório médico</string>
 	<string name="type.amenity.drinking_water">Água potável</string>
 	<string name="type.amenity.driving_school">Autoescola</string>
-	<string name="type.amenity.embassy">Embaixada ou consulado</string>
+	<string name="type.office.diplomatic">Embaixada ou consulado</string>
 	<string name="type.amenity.fast_food">Lanchonete</string>
 	<string name="type.amenity.ferry_terminal">Estação de barcas</string>
 	<string name="type.amenity.fire_station">Posto de bombeiros</string>
@@ -1100,6 +1100,7 @@
 	<string name="type.emergency.fire_hydrant">Hidrante</string>
 	<string name="type.emergency.phone">Telefone de emergência</string>
 	<string name="type.entrance">Entrada</string>
+	<string name="type.healthcare.laboratory">Laboratório médico</string>
 	<string name="type.highway">Rodovia</string>
 	<string name="type.highway.bridleway">Caminho para cavaleiros</string>
 	<string name="type.highway.bridleway.bridge">Caminho para cavaleiros</string>
@@ -1223,7 +1224,6 @@
 	<string name="type.historic.memorial.sculpture">Escultura memorial</string>
 	<string name="type.historic.memorial.statue">Estátua memorial</string>
 	<string name="type.historic.monument">Monumento</string>
-	<string name="type.historic.museum">Museu</string>
 	<string name="type.historic.ruins">Ruínas</string>
 	<string name="type.historic.ship">Barco histórico</string>
 	<string name="type.historic.tomb">Túmulo</string>
@@ -1451,44 +1451,18 @@
 	<string name="type.railway.station.subway">Estação do metrô</string>
 	<string name="type.railway.station.subway.barcelona">Estação do metrô</string>
 	<string name="type.railway.station.subway.berlin">Estação do metrô</string>
-	<string name="type.railway.station.subway.blue">Estação do metrô</string>
-	<string name="type.railway.station.subway.brown">Estação do metrô</string>
-	<string name="type.railway.station.subway.darkgreen">Estação do metrô</string>
-	<string name="type.railway.station.subway.gray">Estação do metrô</string>
-	<string name="type.railway.station.subway.green">Estação do metrô</string>
-	<string name="type.railway.station.subway.grey">Estação do metrô</string>
 	<string name="type.railway.station.subway.kiev">Estação do metrô</string>
-	<string name="type.railway.station.subway.lightblue">Estação do metrô</string>
-	<string name="type.railway.station.subway.lightgreen">Estação do metrô</string>
 	<string name="type.railway.station.subway.london">Estação do metrô</string>
 	<string name="type.railway.station.subway.madrid">Estação do metrô</string>
 	<string name="type.railway.station.subway.minsk">Estação do metrô</string>
 	<string name="type.railway.station.subway.moscow">Estação do metrô</string>
 	<string name="type.railway.station.subway.newyork">Estação do metrô</string>
-	<string name="type.railway.station.subway.orange">Estação do metrô</string>
 	<string name="type.railway.station.subway.paris">Estação do metrô</string>
-	<string name="type.railway.station.subway.purple">Estação do metrô</string>
-	<string name="type.railway.station.subway.red">Estação do metrô</string>
 	<string name="type.railway.station.subway.roma">Estação do metrô</string>
 	<string name="type.railway.station.subway.spb">Estação do metrô</string>
-	<string name="type.railway.station.subway.violet">Estação do metrô</string>
-	<string name="type.railway.station.subway.yellow">Estação do metrô</string>
 	<string name="type.railway.subway">Metrô</string>
-	<string name="type.railway.subway.blue">Metrô</string>
 	<string name="type.railway.subway.bridge">Metrô</string>
-	<string name="type.railway.subway.brown">Metrô</string>
-	<string name="type.railway.subway.darkgreen">Metrô</string>
-	<string name="type.railway.subway.gray">Metrô</string>
-	<string name="type.railway.subway.green">Metrô</string>
-	<string name="type.railway.subway.grey">Metrô</string>
-	<string name="type.railway.subway.lightblue">Metrô</string>
-	<string name="type.railway.subway.lightgreen">Metrô</string>
-	<string name="type.railway.subway.orange">Metrô</string>
-	<string name="type.railway.subway.purple">Metrô</string>
-	<string name="type.railway.subway.red">Metrô</string>
 	<string name="type.railway.subway.tunnel">Metrô</string>
-	<string name="type.railway.subway.violet">Metrô</string>
-	<string name="type.railway.subway.yellow">Metrô</string>
 	<string name="type.railway.subway_entrance">Entrada de metrô</string>
 	<string name="type.railway.subway_entrance.barcelona">Entrada de estação do metrô</string>
 	<string name="type.railway.subway_entrance.berlin">Entrada de estação do metrô</string>
@@ -1510,8 +1484,6 @@
 	<string name="type.railway.yard.tunnel">Pátio de manobras ferroviárias</string>
 	<string name="type.route">Rota</string>
 	<string name="type.route.ferry">Rota de balsa</string>
-	<string name="type.route.ferry.motor_vehicle">Rota de balsa</string>
-	<string name="type.route.ferry.motorcar">Rota de balsa</string>
 	<string name="type.route.shuttle_train">Rota de trem vaivem</string>
 	<string name="type.shop">Loja</string>
 	<string name="type.shop.alcohol">Loja de bebidas alcoolicas</string>
